--- a/micro/package.json
+++ b/micro/package.json
@@ -6,13 +6,17 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.6",
+    "@mui/styles": "^5.2.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "p5": "^1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
+    "three": "^0.122.0",
+    "vanta": "^0.5.21",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
